2008-06-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (applet_do_notify): add action support

	* src/applet-device-wireless.c
		- (wifi_available_dont_show_cb): suppress notification of APs when the
			user says so
		- (idle_check_avail_access_point_notification): add suppression action
		- (queue_avail_access_point_notification): don't show the notificiation
			if it's suppressed

	* src/applet-device-gsm.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c
	  src/applet.c
		- Fix for applet_do_notify() changes

2008-06-05  Dan Williams  <dcbw@redhat.com>

	Patch from Colin Walters <walters@verbum.org>  (gnome.org #534427)

	* src/applet.c
	  src/applet.h
		- (applet_get_settings): add accessor for settings object

	* src/applet-device-wireless.c
		- Notify the user about available wireless networks if there is no
			connection and there aren't any matching saved networks

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (connection_combo_init): when creating a new adhoc network, only show
			existing Ad-Hoc 'shared' connections
		- (nma_wireless_dialog_get_connection): when creating a new adhoc
			network, set the connection's ip4 method to 'shared'

	* src/connection-editor/ce-page-ip4.glade
		- Add a new IPv4 method "Shared to other computers"

	* src/connection-editor/page-ip4.c
		- (method_changed): enable/disable DNS stuff as appropriate when the
			method changes
		- (populate_ui, ui_to_setting): handle the 'shared' method
		- (ce_page_ip4_new): call method_changed() to update widget sensitivity

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_get_default_active_connection): if the only active connection
			is an adhoc connection but it's not 'default' becuase it doesn't
			have a route the internet, show it's state anyway

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_devices): only count wireless devices that are actually
			usable
